--- a/blog/origins-of-kapitan.qmd
+++ b/blog/origins-of-kapitan.qmd
@@ -34,5 +34,6 @@ Surprisingly enough, the Kapitan China are not the reason why I was born as Kapi
 
 It is a matter of historical contingency that my father choose to take-up the name of his best friend in the early 1960s. Joshua Oppenheimer’s dyptich, [the Act of Killing](https://en.wikipedia.org/wiki/The_Act_of_Killing) and [the Look of Silence](http://thelookofsilence.com/) recount the backdrop of anti-Communist and, therefore, anti-Chinese sentiments that led to the forced [renunciation of Chinese surnames in Indonesia](https://en.wikipedia.org/wiki/Legislation_on_Chinese_Indonesians). My dad, then in his teens, did not take matters too seriously and nearly missed the deadline for changing his name and getting his new passport. On an impulse, he asked his best friend, Gerard Kapitan, whether he could take up his name. So, rather than adapting The to an Indonesian-sounding alternative (we have Tedjasurya and Themasoa in our family), The Sik Thay became Frederik Kapitan in 1964. We recently found out that the male lineage of the Kapitan family was in fact broken. Gerard’s (grand?)mother specifically asked for permission to take-up this name once again if and when she bore a son. Franz Kapitan (Gerard’s brother) told us that if the elders hadn’t honoured her request, we all would have been called Tentua. 
 
-Fast forward 50 years later. Our two boys, Manu Lee and Mas Lee, don’t know better than that their last name is Kapitan. A cool and unusual name, which we love to show off by using online-handles such as [El Kapitan](https://en.wikipedia.org/wiki/El_Capitan). And yes, we re-instated the Chinese generation name. I was quite delighted when my sister asked me to become guardian of her first-born, [Justin Lee Kragten](https://www.facebook.com/justinlee.kragten). A couple of years ago I befriended a Chinese young lady, and told her this story. One thing led to another, and ultimately she helped me re-discover an appropriate Chinese name, 郑空慈, which more or less translates into "Emptiness & Loving-Kindness, carried by someone from Zheng’s family". Chinese is a beautiful language.
-"
+Fast forward 50 years later. Our two boys, Manu Lee and Mas Lee, don’t know better than that their last name is Kapitan. A cool and unusual name, which we love to show off by using online-handles such as [El Kapitan](https://en.wikipedia.org/wiki/El_Capitan). And yes, we re-instated the Chinese generation name. I was quite delighted when my sister asked me to become guardian of her first-born, [Justin Lee Kragten](https://www.facebook.com/justinlee.kragten).
+
+A couple of years ago I befriended a Chinese young lady, and I shared this story with her. One thing led to another, and ultimately she helped me re-discover an appropriate Chinese name, 郑空慈, which more or less translates into "Emptiness & Loving-Kindness, carried by someone from Zheng’s family". And thus I came full circle.
