--- a/blog/azimov.qmd
+++ b/blog/azimov.qmd
@@ -7,7 +7,7 @@ categories: [nederlands, responsible ai]
 ---
 
 #
-Het debat over de toekomst van kunstmatige intelligentie (KI) is weer (nog?) in volle gang. Blij om te zien dat in Europa meer aandacht voor is. De Fransen zouden de Fransen niet zijn als ze niet [de moral high-ground claimen](http://het%20debat%20over%20de%20toekomst%20van%20ai%20is%20nog%20steeds%20in%20volle%20gang.%20blij%20om%20te%20zien%20dat%20in%20europa%20hier%20meer%20aandacht%20voor%20is.%20de%20fransen%20zouden%20de%20fransen%20niet%20zijn%20om%20niet%20de%20_moral%20highground_%20te%20claimen%20%28https//www.trouw.nl/opinie/europa-heeft-een-unique-selling-point-de-ethische-kijk-op-kunstmatige-intelligentie~a735de20/).). Enfin, het is in elk geval een goede stap dat [Europa haar eigen ambities en onderzoeksagenda voor kunstmatige intelligentie gaat vormgeven](https://ec.europa.eu/commission/presscorner/detail/nl/IP_18_3362). Het valt mij op dat veiligheid en ethiek vaak genoemd wordt waarin Europa zich in kan onderscheiden. Vanuit de [Future of Humanity Institute aan de University of Oxford](https://www.fhi.ox.ac.uk/) wordt hier reeds onderzoek naar gedaan en breekt men een lans voor [meer middelen voor veilige ontwikkeling van KI](https://80000hours.org/problem-profiles/positively-shaping-artificial-intelligence/). Mogelijk kunnen we hier echt iets in betekenen.
+Het debat over de toekomst van kunstmatige intelligentie (KI) is weer (nog?) in volle gang. Blij om te zien dat in Europa er meer aandacht voor is. De Fransen zouden de Fransen niet zijn als ze niet [de moral high-ground claimen](http://het%20debat%20over%20de%20toekomst%20van%20ai%20is%20nog%20steeds%20in%20volle%20gang.%20blij%20om%20te%20zien%20dat%20in%20europa%20hier%20meer%20aandacht%20voor%20is.%20de%20fransen%20zouden%20de%20fransen%20niet%20zijn%20om%20niet%20de%20_moral%20highground_%20te%20claimen%20%28https//www.trouw.nl/opinie/europa-heeft-een-unique-selling-point-de-ethische-kijk-op-kunstmatige-intelligentie~a735de20/). Enfin, het is in elk geval een goede stap dat [Europa haar eigen ambities en onderzoeksagenda voor kunstmatige intelligentie gaat vormgeven](https://ec.europa.eu/commission/presscorner/detail/nl/IP_18_3362). Het valt mij op dat veiligheid en ethiek vaak genoemd wordt waarin Europa zich in kan onderscheiden. Vanuit de [Future of Humanity Institute aan de University of Oxford](https://www.fhi.ox.ac.uk/) wordt hier reeds onderzoek naar gedaan en breekt men een lans voor [meer middelen voor veilige ontwikkeling van KI](https://80000hours.org/problem-profiles/positively-shaping-artificial-intelligence/). Mogelijk kunnen we hier echt iets in betekenen.
 
 ::: {.grid}
 ::: {.g-col-8}
