Add more recipes

--- a/recepten/dahl-met-zoete-aardappel.qmd
+++ b/recepten/dahl-met-zoete-aardappel.qmd
@@ -3,7 +3,7 @@ title: Dahl met zoete aardappel en kokosmelk
 description: |
     Een favoriet van Hello Fresh.
 image: ./images/dahl-zoete-aardappel.jpg
-categories: []
+categories: [vegetarisch]
 ---
 
 :::{.grid}
