--- a/index.qmd
+++ b/index.qmd
@@ -28,7 +28,8 @@ about:
 }
 
 .bgimg {
-  background-image: url('images/hero-extended.png');
+  background-image: url('images/hero.jpg');
+  Background-size: cover;
 }
 .hero-quote {
   font-family: "Zilla Slab";
@@ -60,7 +61,7 @@ Many people continue to have high expections of what data and AI can bring. Yet,
 
 #### Gaining strategic autonomy
 
-The key towards creating sustainable change with digital technologies lies in increasing your own data literacy and understanding of AI, and that of your organization. AI is not sci-fi, we need to demystify digital technologies. That way, professionals and domain experts can obtain strategic autonomy to reason, think, imagine en create applications of AI themselves. Technology can only be of value when it is put within the appropriate business, societal or human context. 
+The key towards creating sustainable change with digital technologies lies in increasing your own data literacy and understanding of AI, and that of your organization. AI is not sci-fi, we need to demystify digital technologies. That way, professionals and domain experts can obtain strategic autonomy to reason, think, imagine en create applications of with themselves. Technology can only be of value when it is put within the appropriate business, societal or human context. 
 
 We offer the following services to help you master data and AI yourself.
 :::
@@ -77,7 +78,7 @@ We offer the following services to help you master data and AI yourself.
 
 ### Data-centric AI
 
-Data sit at the core of digital business transformation. As machine learning algorithms mature, the biggest challenge in making AI work is to improve the quality and scale of the data required to train AI. In our experience most AI projects fail because existing data platforms lack the reliability, flexibility and performance to effectively develop and deploy AI systems. We systematically engineer data so it can be used by AI systems. To improve your systems, drive innovation and enable data-based decision intelligence. We call that data-centric AI.
+Data sit at the core of digital business transformation. As machine learning algorithms mature, the biggest challenge in making AI work is to improve the quality and scale of the data required to train AI. In our experience most AI projects fail because existing data platforms lack the reliability, flexibility and performance to effectively develop and deploy AI systems. We systematically engineer data so it can be used by AI systems to improve your business, drive innovation and enable data-based decision intelligence. We call that data-centric AI.
 
 <small class="text-muted">Data Architecture | MLOps (Machine Learning Operations) | Federated Learning | Privacy-Enhancing Technologies</small>
 :::
