--- a/index.qmd
+++ b/index.qmd
@@ -57,11 +57,11 @@ about:
 ::: {.g-col-10}
 #### Unmet expectations of AI
 
-Many people continue to have high expections of what data and AI can bring. Yet, the majority of organizations struggle to capture real value from data and AI-driven innovations. Studies have shown that up to 95% of such innovations never make it past the proof-of-concept stage into full-scale operations.
+Many people continue to have high expectations of what data and AI can bring. Yet, the majority of organisations struggle to capture real value from data and AI-driven innovations. Studies have shown that up to 95% of such innovations never make it past the proof-of-concept stage into full-scale operations.
 
 #### Gaining strategic autonomy
 
-The key towards creating sustainable change with digital technologies lies in increasing your own data literacy and understanding of AI, and that of your organization. AI is not sci-fi, we need to demystify digital technologies. That way, professionals and domain experts can obtain strategic autonomy to reason, think, imagine en create applications of with themselves. Technology can only be of value when it is put within the appropriate business, societal or human context. 
+The key towards creating sustainable change with digital technologies lies in increasing your own data literacy and understanding of AI, and that of your organisation. AI is not sci-fi, we need to demystify digital technologies. That way, professionals and domain experts can obtain strategic autonomy to reason, think, imagine and create applications with AI themselves. Technology can only be of value when it is put within the appropriate business, societal or human context. 
 
 We offer the following services to help you master data and AI yourself.
 :::
@@ -99,7 +99,7 @@ Data sit at the core of digital business transformation. As machine learning alg
 
 ::: {.g-col-8}
 ### Applied AI
-The possibilities of AI are virtually endless and can fundamentally change the way you run your business or lead your organisation. It changes business strategies, policies as well as the behaviour of your teams. If your company embarks on integrating AI, it needs to do what is relevant and what you want it for. We developed impactful AI applications that are accurate. We take into account the factors that drive the predictions and relate it to physical systems and domain expertise. And help you transform and drive AI innovation in your services or products.
+The possibilities of AI are virtually endless and can fundamentally change the way you run your business or lead your organisation. It changes business strategies, policies as well as the behaviour of your teams. If your company embarks on integrating AI, it needs to do what is relevant and what you want it for. We developed impactful AI applications that are accurate, taking into account the factors that drive the predictions and relating it to domain expertise. We help you integrate AI innovations in your services or products.
 
 <small class="text-muted">Explainable AI | Generative AI & Large Language Models | Physics-Informed Machine Learning</small> 
 :::
@@ -114,7 +114,7 @@ The possibilities of AI are virtually endless and can fundamentally change the w
 
 ### Coaching & mentoring
 
-Data and AI will change your business and your way of working. And not all employees or staff are immediately ready for this. We teach, coach and mentor professionals who require a better understanding of data and artificial intelligence. And make them both comfortable and topic-specialists. We specialise in bespoke masterclasses, built around your organisation and focussing on how AI can impact your line business.
+Data and AI will change your business and your way of working. Not everyone is immediately ready for this. We teach, coach and mentor professionals who require a better understanding of data and artificial intelligence, making them comfortable and topic-specialists. We offer in-company on-the-job coaching, working side-by-side with your team to explore how AI can impact your line of business.
 
 <small class="text-muted">One-the-job coaching for individuals and teams | Challenge-based learning | Technical deep-dives for experts</small> 
 :::
@@ -135,7 +135,7 @@ Data and AI will change your business and your way of working. And not all emplo
 
 ::: {.g-col-8}
 ### Masterclasses & public speaking
-We provide masterclasses on topics related to data & AI. It provides a fundamental basis from basics to concepting, even implementation. For larger audiences, we create workshops or provide keynotes so more and more professionals obtain a better understanding of data and AI.
+We provide masterclasses on topics related to data & AI, ranging from introductory lectures to more advanced deep-dives. For larger audiences, we create workshops or provide keynotes such that professionals at all levels can obtain a better understanding of data and AI.
 
 <small class="text-muted">Keynote speeches | Masterclasses for management and executives | Inspirational lectures</small>
 :::
