--- a/recepten/sauteed-spinach-onions-mushroom.qmd
+++ b/recepten/sauteed-spinach-onions-mushroom.qmd
@@ -1,18 +1,18 @@
 ---
-title: Bloemkool ovenschotel met gehakt
+title: Sautéed spinach with mushrooms and caramelized onions
 description: |
     Delicious sautéed spinach with mushrooms and caramelized Onions is a favorite side dish for grilled meats. This vegetarian dish is quite versatile: you can eat it as-is, or you can serve it alongside some pasta, ravioli or ready made tortellini. It is also great with grilled steak, pork, or chicken.
-image: .image/sauteed-spinach.jpg
+image: images/sauteed-spinach.jpg
 categories: [vegetarisch]
 ---
 
 :::{.grid}
 :::{.g-col-8}
-    Delicious sautéed spinach with mushrooms and caramelized Onions is a favorite side dish for grilled meats. This vegetarian dish is quite versatile: you can eat it as-is, or you can serve it alongside some pasta, ravioli or ready made tortellini. It is also great with grilled steak, pork, or chicken.
+Delicious sautéed spinach with mushrooms and caramelized onions is a favorite side dish for grilled meats. This vegetarian dish is quite versatile: you can eat it as-is, or you can serve it alongside some pasta, ravioli or ready made tortellini. It is also great with grilled steak, pork, or chicken.
 
 :::
 :::{.g-col-4}
-![]( .image/sauteed-spinach.jpg)
+![](images/sauteed-spinach.jpg)
 :::
 :::
 
