--- a/recepten/ottolenghi-roasted-eggplant.qmd
+++ b/recepten/ottolenghi-roasted-eggplant.qmd
@@ -30,7 +30,7 @@ From Ottolenghi's Simple.
 
 ## Bereidingswijze
 
-- Preheat oven to 450 degrees.
-- Mix eggplant in a large bowl with 1/2 teaspoon salt. Transfer to 2 large parchment-lined baking sheets and then brush with 5 tablespoons of oil — you want it on both sides of the discs. Bake for 35 minutes, until dark golden brown and cooked through. Remove from the oven and set aside to cool.
-- In a small bowl, whisk together the anchovies, vinegar, garlic, 1/2 teaspoon of salt, and 1/4 teaspoon of pepper. Slowly pour in the remaining 2 tablespoons of oil, whisking continuously, until combined.
-- When ready to serve, finely chop the oregano and place in a large bowl along with the eggplant and parsley. Pour in the anchovy dressing, gently mix, and transfer to a platter or bowl.
+1. Preheat oven to 450 degrees.
+1. Mix eggplant in a large bowl with 1/2 teaspoon salt. Transfer to 2 large parchment-lined baking sheets and then brush with 5 tablespoons of oil — you want it on both sides of the discs. Bake for 35 minutes, until dark golden brown and cooked through. Remove from the oven and set aside to cool.
+1. In a small bowl, whisk together the anchovies, vinegar, garlic, 1/2 teaspoon of salt, and 1/4 teaspoon of pepper. Slowly pour in the remaining 2 tablespoons of oil, whisking continuously, until combined.
+1. When ready to serve, finely chop the oregano and place in a large bowl along with the eggplant and parsley. Pour in the anchovy dressing, gently mix, and transfer to a platter or bowl.
