--- a/recepten/soto-ayam.qmd
+++ b/recepten/soto-ayam.qmd
@@ -38,10 +38,8 @@ Voor 4 personen:
 :::
 
 ## Bereidingswijze
-De sjalottes, knoflook, kemiries, ketoembar en trassi fijn kneuzen en fruiten in de boter. Twee flinke glazen water bijvoegen en hierin de gesneden kip koken tot ze zacht is. Zodra het water kookt, de sereh en bouillonblokjes toevoegen. Deksel op de pan, niet te groot vuur. Wanneer de kip bijna gaar is de gesneden prei toevoegen. Indien nodig telkens wat heet water bijvoegen, want de kip moet zwemmen in het vocht.
 
-De laksa, kool, eieren en aardappelen worden apart gaar gekookt; snijd daarna de eieren en aardappelen in ronde platte schijfjes. Bieslook en selderij snipperen.
-
-U dient de soto als volgt op: in diepe borden schept u wat van de gesneden aardappelen, daar over heen plakjes ei, de gesneden laksa en kool. Bovenop de gesnipperde bieslook en selderij, het laatst wat fruitjes. Tot slot een paar soeplepels van de soto er over heen.
-
-Hierbij wordt natuurlijk de bijbehorende sambal gebruikt, als finish- ing touch. Daarvoor heeft u van tevoren vier kemiries, drie ontpitte lomboks met wat trassi en zout en een mespunt suiker gekneusd. Een theelepel van deze sambal is genoeg voor elke portie. De fijn- proevers hebben ook een schoteltje met ketjap, waarin citroensap geperst, klaar staan om de heerlijke smaak te vervolmaken. Een hapje kroepoek oedang er tussen door, een klein kommetje warme rijst als bijvulling van deze heerlijke maaltijd zal een ieder zeer te- vreden van tafel doen opstaan. 
+1. De sjalottes, knoflook, kemiries, ketoembar en trassi fijn kneuzen en fruiten in de boter. Twee flinke glazen water bijvoegen en hierin de gesneden kip koken tot ze zacht is. Zodra het water kookt, de sereh en bouillonblokjes toevoegen. Deksel op de pan, niet te groot vuur. Wanneer de kip bijna gaar is de gesneden prei toevoegen. Indien nodig telkens wat heet water bijvoegen, want de kip moet zwemmen in het vocht.
+1. De laksa, kool, eieren en aardappelen worden apart gaar gekookt; snijd daarna de eieren en aardappelen in ronde platte schijfjes. Bieslook en selderij snipperen.
+1. U dient de soto als volgt op: in diepe borden schept u wat van de gesneden aardappelen, daar over heen plakjes ei, de gesneden laksa en kool. Bovenop de gesnipperde bieslook en selderij, het laatst wat fruitjes. Tot slot een paar soeplepels van de soto er over heen.
+1. Hierbij wordt natuurlijk de bijbehorende sambal gebruikt, als finish- ing touch. Daarvoor heeft u van tevoren vier kemiries, drie ontpitte lomboks met wat trassi en zout en een mespunt suiker gekneusd. Een theelepel van deze sambal is genoeg voor elke portie. De fijn- proevers hebben ook een schoteltje met ketjap, waarin citroensap geperst, klaar staan om de heerlijke smaak te vervolmaken. Een hapje kroepoek oedang er tussen door, een klein kommetje warme rijst als bijvulling van deze heerlijke maaltijd zal een ieder zeer te- vreden van tafel doen opstaan. 
