--- a/recepten/ottolenghi-pasta-a-la-norma.qmd
+++ b/recepten/ottolenghi-pasta-a-la-norma.qmd
@@ -8,14 +8,6 @@ categories: [vegetarisch]
 
 :::{.grid}
 :::{.g-col-8}
-Een klassieker van Ottolenghi, uit Simpel
-
-:::
-:::{.g-col-4}
-![](./images/ottolenghi-pasta-alla-norma.jpg)
-:::
-:::
-
 ## Ingredienten
 
 - 3 stuks aubergines (circa 900 g)
@@ -30,10 +22,16 @@ Een klassieker van Ottolenghi, uit Simpel
 - 20 g basilicumblad, gescheurd
 - zout en zwarte peper
 
+:::
+:::{.g-col-4}
+![](./images/ottolenghi-pasta-alla-norma.jpg)
+:::
+:::
+
 ## Bereidingswijze
 
-- Verhit de oven tot 220 °C.
-- Schaaf van elke aubergine van boven naar beneden om en om lange repen schil af zodat ze gestreept zijn. Snijd de aubergines overdwars in 1 cm dikke plakken en leg ze in een kom met 75 ml olijfolie, ¾ theelepel zout en royaal versgemalen peper. Meng alles goed en verdeel de plakken over twee met bakpapier beklede bakplaten. Rooster ze 30-35 minuten in de oven tot ze diep goudbruin zijn. Haal de bakplaten uit de oven en laat afkoelen.
-- Giet 2 eetlepels olie in een sauteerpan en zet hem op halfhoog tot hoog vuur. Voeg knoflook en chilipeper toe en bak alles al roeren 1-2 minutes tot de knoflook goudbruin is. Voeg de tomaten, oregano, suiker en ½ theelepel zout toe en maal er wat peper overheen. Draai het vuur halfhoog tot laag en laat alles 10 minuten zachtjes pruttelen tot het een dikke saus is. Verwijder de takjes oregano en roer de plakken aubergine door de saus. Zet opzij.
-- Breng een pan water met zout aan de kook en voeg de spaghetti toe. Kook hem beetgaar, giet hem af en vang een deel van het kookwater op. Schep de spaghetti in de pan met saus en meng goed, voeg ⅔ van de pecorino en het basilicum toe en als de saus te dik is ook nog wat kookwater.
-- Verdeel de spaghetti over diepe borden, bestrooi met de overgebleven pecorino en het basilicum en sprenkel er 1 eetlepel olie overheen. Dien de pasta op.
+1. Verhit de oven tot 220 °C.
+1. Schaaf van elke aubergine van boven naar beneden om en om lange repen schil af zodat ze gestreept zijn. Snijd de aubergines overdwars in 1 cm dikke plakken en leg ze in een kom met 75 ml olijfolie, ¾ theelepel zout en royaal versgemalen peper. Meng alles goed en verdeel de plakken over twee met bakpapier beklede bakplaten. Rooster ze 30-35 minuten in de oven tot ze diep goudbruin zijn. Haal de bakplaten uit de oven en laat afkoelen.
+1. Giet 2 eetlepels olie in een sauteerpan en zet hem op halfhoog tot hoog vuur. Voeg knoflook en chilipeper toe en bak alles al roeren 1-2 minutes tot de knoflook goudbruin is. Voeg de tomaten, oregano, suiker en ½ theelepel zout toe en maal er wat peper overheen. Draai het vuur halfhoog tot laag en laat alles 10 minuten zachtjes pruttelen tot het een dikke saus is. Verwijder de takjes oregano en roer de plakken aubergine door de saus. Zet opzij.
+1. Breng een pan water met zout aan de kook en voeg de spaghetti toe. Kook hem beetgaar, giet hem af en vang een deel van het kookwater op. Schep de spaghetti in de pan met saus en meng goed, voeg ⅔ van de pecorino en het basilicum toe en als de saus te dik is ook nog wat kookwater.
+1. Verdeel de spaghetti over diepe borden, bestrooi met de overgebleven pecorino en het basilicum en sprenkel er 1 eetlepel olie overheen. Dien de pasta op.
