--- a/recepten/soto-ayam.qmd
+++ b/recepten/soto-ayam.qmd
@@ -16,8 +16,7 @@ Voor 4 personen:
 - 2 teentjes knoflook
 - 4 kemiries 
 - 1⁄2 theel. ketoembar 
-- 11⁄2 vingerlengte koenir of 
-- 2 theel. poeder 
+- 11⁄2 vingerlengte koenir of 2 theel. poeder 
 - 1 theel. gekruimelde trassi 11/2 eetl. boter 
 - 1 vette kip 
 - 1 stengel sereh 
