--- a/recepten/soto-ayam.qmd
+++ b/recepten/soto-ayam.qmd
@@ -17,7 +17,8 @@ Voor 4 personen:
 - 4 kemiries 
 - 1⁄2 theel. ketoembar 
 - 1 1⁄2 vingerlengte koenir of 2 theel. poeder 
-- 1 theel. gekruimelde trassi 11/2 eetl. boter 
+- 1 theel. gekruimelde trassi
+- 1 1/2 eetl. boter 
 - 1 vette kip 
 - 1 stengel sereh 
 - 2 bouillonblokjes
