--- a/blog/obsidian-setup.qmd
+++ b/blog/obsidian-setup.qmd
@@ -35,7 +35,7 @@ But I was never quite satisfied with any of these setups. To address my note-tak
 In this day and age, surely there must be a better way in which we can use digital tools to support our reading, thinking and writing? Surely I should be able to render a website, a pdf - even a Word document if a clients asks for it - using the same markdown content? And indeed, it seems that as of 2022 a number of tools have delivered on the promise of supporting a smooth, fully digital workflow for reading, thinking and writing. In my case, I chose [Obsidian](https://obsidian.md/) and [Quarto](https://posit.co/blog/announcing-quarto-a-new-scientific-and-technical-publishing-system/) as the core components.[^alternatives]
 
 ## Obsidian, arguably the most flexible note-taking app
-Obsidian arguably is the most flexible note-taking app out there. The key differentiating feature for me is its ability to create graphs of interlinked notes, thereby natively supporting [Andy Matuschak's Evergreen note-taking concept](https://notes.andymatuschak.org/Evergreen_notes). Its vibrant community, with over 1,370 contributed plugins at the time of writing is also a boon, which allows me to integrate it with my other tools.
+Obsidian arguably is the most flexible note-taking app out there. The key differentiating feature for me is its ability to create graphs of interlinked notes, thereby natively supporting [Andy Matuschak's Evergreen note-taking concept](https://notes.andymatuschak.org/Evergreen_notes). Its vibrant community is also a boon: with over 1,370 contributed plugins at the time of writing , I could find everything I need to integrate it with the other tools in my workflow.
 
 The diagram below shows how I have integrated calibre and Obsidian for use on my MacBook, Pixel 5 Android phone and reMarkable 2. [Syncthing](https://syncthing.net) does the heavy lifting of keeping my markdown notes and ebooks in sync across multiple devices. That way, I have maximal control with the least amount of lock-in. Incidentally, my calibre library is also synced to my NAS, with an additional backup to Google Drive which serves as my primary storage platform. Note that this setup work for any combination of {Linux | OSX | Windows} desktops and {iOS | Android} smartphones, as all the apps are cross-platform.[^reader]
 
