--- a/blog/better-altair-theme.ipynb
+++ b/blog/better-altair-theme.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "title: Amazing Altair with an even better theme\n",
-    "description: Implmenting best practices for data visualization as an Altair theme.\n",
+    "description: Implementing best practices for data visualization as an Altair theme.\n",
     "date: 2024-01-21\n",
     "image: images/urban-institute-styleguide.webp\n",
     "code-fold: true\n",
@@ -26,9 +26,7 @@
    "source": [
     "I have been in love with Altair ever since I first ran into it. The logic, the structure, the syntax: it's all just there and it helps me to get my work done. Paired with [Quarto](https://quarto.org) or [Streamlit](https://streamlit.io), I can create stunning pdf reports, interactive documents and single-page apps for my clients, all from one codebase. After attending a workshop by my fellow data viz afficianado [Sara Sprinkhuizen](https://www.thedatavisionlab.com/), I wanted to implement her tried-and-test best practices for charts into an Altair.\n",
     "\n",
-    "In this post, we will illustate how these improvements work for a handful of visualizations that are often used for exploratory data analysis. We will implement her design principles in an Altair theme, such that we can consistently generate better charts in our workflow.\n",
-    "\n",
-    "But first,  let's start how Altair's default theme renders a scatterplot, bar chart and line chart.  \n"
+    "In this post, we will illustate how these improvements work for a handful of visualizations that are often used for exploratory data analysis. We will implement her design principles in an Altair theme, such that we can consistently generate better charts in our workflow. Let's start and see how Altair's default theme renders a scatterplot, bar chart and line chart.  \n"
    ]
   },
   {
@@ -370,10 +368,10 @@
     "\n",
     "Sara's main points for improving the standard layout of charts basically boil down to the following princples:\n",
     "\n",
+    "- __use informative action titles and subtitles__: much like effective presentations, using so-called [action titles](https://slideworks.io/resources/how-to-write-action-titles-like-mckinsey) will greatly increase the impact of your data visualization. Formulated as a short, simple sentence, action titles should ideally be the main takeaway or ‘so what’ of the chart, and – if done right – allows the audience to only read the title to understand the primary message of the visual.\n",
     "- __less is more__: before minimalism became all the rage in design, Edward Tufte coined the principle of [maximizing the data-to-ink ratio](https://infovis-wiki.net/wiki/Data-Ink_Ratio). Charts are easier to read by removing unnecessary clutter. So get rid of gridlines, background colors and the  like.\n",
     "- __keep it horizontal__: text is easier to read when it is horizontally aligned. So straighten up those rotated x-axis labels and y-axis titles\n",
-    "- __use informative action titles and subtitles__: much like effective presentations, using so-called [action titles](https://slideworks.io/resources/how-to-write-action-titles-like-mckinsey) will greatly increase the impact of your data visualization. Formulated as a short, simple sentence. It should ideally be the main takeaway or ‘so what’ of the chart, and – if done right – allows the audience to only read the title to understand the primary message of the visual.\n",
-    "- __loose the legends__: having to lookup colors increases the cognitive load of reading a chart. Use annotations instead.\n",
+    "- __lose the legends__: having to lookup colors increases the cognitive load of reading a chart. Use annotations instead.\n",
     "\n",
     "All these principles can be readily implemented in Altair. Sergio Sánchez in fact captured the first three principles when implementing the Urban Institute styleguide (shown below) as [an Altair theme](https://towardsdatascience.com/consistently-beautiful-visualizations-with-altair-themes-c7f9f889602).\n",
     "\n",
