--- a/blog/better-altair-theme.ipynb
+++ b/blog/better-altair-theme.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I have been in love with Altair ever since I first ran into it. The logic, the structure, the syntax: it's all just there and it helps me to get my work done. Paired with [Quarto](https://quarto.org) or [Streamlit](https://streamlit.io), I can create stunning pdf reports, interactive documents and single-page apps for my clients, all from one codebase. After attending a workshop by my fellow data viz afficianado [Sara Sprinkhuizen](https://www.thedatavisionlab.com/), I wanted to implement her tried-and-test best practices for charts into an Altair.\n",
+    "I have been in love with Altair ever since I first ran into it. The logic, the structure, the syntax: it's all just there and it helps me to get my work done. Paired with [Quarto](https://quarto.org) or [Streamlit](https://streamlit.io), I can create stunning pdf reports, interactive documents and single-page apps for my clients, all from one codebase. After attending a workshop by my fellow data viz afficianado [Sara Sprinkhuizen](https://www.thedatavisionlab.com/), I wanted to implement her tried-and-tested best practices for charts into an Altair.\n",
     "\n",
     "In this post, we will illustate how these improvements work for a handful of visualizations that are often used for exploratory data analysis. We will implement her design principles in an Altair theme, such that we can consistently generate better charts in our workflow. Let's start and see how Altair's default theme renders a scatterplot, bar chart and line chart.  \n"
    ]
