--- a/blog/datasolidariteit-ibestuur.qmd
+++ b/blog/datasolidariteit-ibestuur.qmd
@@ -1,5 +1,5 @@
 ---
-title: Een vals dilemmea: privacy versus datasolidariteit 
+title: "Een vals dilemma: privacy versus datasolidariteit" 
 subtitle: Artikel 
 description: |
     Veel mensen denken ‘als data over mij gaan, dan zijn het automatisch persoonsgegevens die beschermd moeten worden’. Data zijn geen eigendom, maar een gemeengoed. Gezondheidsdata gaan over de patiënt, maar zijn niet van de patiënt. Samen met Antoinette Vlieger en Egge van der Poel pleit ik voor datasolidariteit als concept waarmee bewuste afwegingen gemaakt worden tussen collectieve en individuele belangen, tussen de huidige privacy en de gezondheidszorg van generaties na ons. 
