--- a/blog/better-altair-theme.ipynb
+++ b/blog/better-altair-theme.ipynb
@@ -9,6 +9,7 @@
     "description: Implementing best practices for data visualization as an Altair theme.\n",
     "date: 2024-01-21\n",
     "image: images/urban-institute-styleguide.webp\n",
+    "author: Daniel Kapitan\n",
     "code-fold: true\n",
     "execute:\n",
     "    freeze: true\n",
