Fix colours homepage

--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ format:
   </div>
 </div>
 <p class="lead">
-   <small class="text-muted">DATA-CENTRIC AI &emsp; | &emsp; APPLIED AI &emsp; | &emsp; COACHING & MENTORING &emsp; | &emsp; MASTERCLASSES & PUBLIC SPEAKING</small>
+   <small class="text-hero">DATA-CENTRIC AI &emsp; | &emsp; APPLIED AI &emsp; | &emsp; COACHING & MENTORING &emsp; | &emsp; MASTERCLASSES & PUBLIC SPEAKING</small>
 </p>
 <style type="text/css">
 .lead {
