--- a/nugget/dakkoffer.qmd
+++ b/nugget/dakkoffer.qmd
@@ -20,7 +20,7 @@ Afmetingen voor het plaatsen van de dakkoffer (zie foto):
 
 - 32 cm van voorkant dakrail tot voorkant voet Thule
 - 80 cm tussen de twee daklegger
-- 13 cm tussen rand daklegger en linker T-adopter
+- 13 cm tussen rand daklegger en linker T-adapter
 - 63 cm afstand tussen T-adapters (afstand gaten in dakkoffer)
 
 
